# Lexer

./: .gitignore  CMakeLists.txt  README.md
Headers/: buffer.h  kits.h  lexer.h  markTable.h  token.h
Sources/: buffer.cpp  kits.cpp  lexer.cpp  main.cpp  markTable.cpp  token.cpp
